--- a/templates/back/book/index.html.twig
+++ b/templates/back/book/index.html.twig
@@ -28,7 +28,7 @@
 					<td>{{ book.editor }}</td>
 					<td>{{ book.isbn }}</td>
 					<td>
-						<a href="{{ path('app_back_book_show', {'id': book.id}) }}" class="btn btn-primary">Voir</a>
+						<a href="{{ path('app_back_book_show', {'id': book.id}) }}" class="btn btn-primary mb-1">Voir</a>
 						<a href="{{ path('app_back_book_edit', {'id': book.id}) }}" class="btn btn-warning">Modifier</a>
 					</td>
 				</tr>
